# TheProgrammerWorkshop

./: .gitignore  pyproject.toml
AutoProof/: justfile  pyproject.toml
AutoProof/src/autoproof/: __main__.py
MarchingSquare/: justfile  pyproject.toml
MarchingSquare/src/marchingsquare/: __init__.py  __main__.py  constants.py  metaballs.py  sketch.py
Metaball/: .gitignore  README.md  justfile  pyproject.toml
Metaball/src/metaball/: __init__.py  __main__.py  constants.py  metaballs.py  palettes.py  sketch.py
Spacerace/: .gitignore  README.md  justfile  pyproject.toml
Spacerace/src/spacerace/: __init__.py  __main__.py
Spacerace/src/spacerace/entities/: asteriod.py  entity.py  player.py
Spacerace/src/spacerace/scenes/: context.py  game.py  game_over.py  intro.py  scene_manager.py  title.py
Spacerace/src/spacerace/utils/: audio.py  graphic.py  resources.py
Spacerace/tests/spacerace/scenes/: test_scene_manager.py
ThreeBody/: justfile  pyproject.toml
ThreeBody/data/shaders/: lighting.fs  phong.fs
ThreeBody/src/threebody/: __init__.py  __main__.py  constants.py
ThreeBody/src/threebody/entities/: entity.py  star.py
ThreeBody/src/threebody/scenes/: galaxy.py
ThreeBody/src/threebody/utils/: light.py  physic.py  simple_allocator.py  sphere.py  vector.py
TinyRpg/: .gitignore  README.md  justfile  pyproject.toml
TinyRpg/data/database/: items.json  messages.json  resources.json
TinyRpg/data/maps/: TestMap2.tiled-session  tinyrpg.tiled-session
TinyRpg/data/maps/levels/: level1.tmx  level2.tmx
TinyRpg/data/maps/tilesets/: Basic_Furniture.tsx  Basic_Grass.tsx  Dirt.tsx  Dirt_Wide.tsx  Doors.tsx  Fences.tsx  Grass.tsx  Hills.tsx  Water.tsx  Wood_Bridge.tsx  Wooden_House_Walls.tsx  decorations.tsx  tilesets.tsx
TinyRpg/data/textures/: hey.ase
TinyRpg/src/tinyrpg/: __init__.py  __main__.py  constants.py  items.py  messages.py  resources.py
TinyRpg/src/tinyrpg/characters/: __init__.py  enemy.py  hero.py  npc.py  player.py  rules.py
TinyRpg/src/tinyrpg/engine/: __init__.py  camera.py  character.py  draw_command.py  draw_manager.py  drawing.py  entity.py  inventory.py  map.py  particle.py  renderer.py  sprite.py  widget.py
TinyRpg/src/tinyrpg/engine/base/: animation.py  camera.py  database.py  drawing.py  entity.py  input.py  particle.py  renderer.py  resources.py  sound.py  sprite.py  widget.py
TinyRpg/src/tinyrpg/engine/effects/: dialog.py  vertical.py
TinyRpg/src/tinyrpg/engine/game/: character.py  fade_in_out.py  inventory.py  map.py  object.py  quest.py  scene.py
TinyRpg/src/tinyrpg/engine/gui/: Panel.py  component.py  image_box.py  item_box.py  item_list.py  item_text.py  panel.py  table_layout.py  text_box.py  window.py
TinyRpg/src/tinyrpg/engine/utils/: bbox.py  pickle.py  quad_tree.py  timer.py
TinyRpg/src/tinyrpg/objects/: __init__.py  chest.py
TinyRpg/src/tinyrpg/particles/: __init__.py  feary.py  hello.py  hey.py  message.py  pick.py  pick_up.py  toast.py
TinyRpg/src/tinyrpg/quests/: __init__.py  grace_quest.py  grace_shop.py
TinyRpg/src/tinyrpg/scenes/: __init__.py  fade_in_out.py  game.py  game_over.py  game_winner.py  intro.py  menu.py
TinyRpg/src/tinyrpg/sprites/: animation.py  character.py  enemy.py  hero.py  npc.py  sprite.py
TinyRpg/src/tinyrpg/utils/: __init__.py  animation.py  bbox.py  draw.py  draw_manager.py  pyray_util.py  quad_tree.py  resources.py  sprite.py  tiledmap.py
TinyRpg/src/tinyrpg/widgets/: __init__.py  dialog.py  game_over_box.py  inventory.py  inventory_box.py  menu_box.py  message.py  message_box.py  shop.py  shopping_cart.py
TinyRpg/tests/tinyrpg/engine/utils/: test_bbox.py  test_quad_tree.py
TinyRpg/tests/tinyrpg/utils/: test_quad_tree.py
Tutorial2/: pyproject.toml
Tutorial2/notebooks/: perceptron.ipynb
Tutorial3/notebooks/: wave_collapse.ipynb
