[project]
name = "threebody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Romuald Rousseau", email = "romuald.rousseau@servier.com" }
]
requires-python = ">=3.11"
dependencies = [
    "raylib>=5.5.0.2",
]

[project.scripts]
threebody = "threebody.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"   # pydocstyle
]
ignore = [
    "C901",  # Too complex
    "W191",  # Indentation contains tabs
    "D401",  # Imperative mood
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in `__init__`
    "E731"   # Lambda-assignment
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
