[project]
name = "tinyrpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Romuald Rousseau", email = "romualdrousseau@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pytmx>=3.32",
    "raylib>=5.5.0.2",
]

[project.scripts]
tinyrpg = "tinyrpg.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
